new mobius